# api/openapi/jobs.yaml
@@ -10,6 +10,7 @@ paths:
   "/projects/{project_id}/jobs":
     post:
       tags: *tags
+      operationId: "CreateEnsemblingJob"
       summary: Submit an Ensembling job.
       parameters:
         - in: path
@@ -27,6 +28,30 @@ paths:
       responses:
         "202":
           description: Accepted.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/EnsemblingJob"
+
+  "/projects/{project_id}/jobs/{id}":
+    get:
+      tags: *tags
+      operationId: "GetEnsemblingJob"
+      summary: Get an existing Ensembling job.
+      parameters:
+        - in: path
+          name: project_id
+          schema:
+            $ref: "#/components/schemas/Id"
+          required: true
+        - in: path
+          name: id
+          schema:
+            $ref: "#/components/schemas/Id"
+          required: true
+      responses:
+        "200":
+          description: A JSON object representing an Ensembling Job
           content:
             application/json:
               schema:
